--- a/new_library/package.json
+++ b/new_library/package.json
@@ -12,8 +12,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "build-storybook": "build-storybook -c .storybook",
     "storybook": "start-storybook"
-
   },
   "eslintConfig": {
     "extends": "react-app"
