--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "components",
+  "name": "components-library-tissa",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
